OO-5909: update jamwiki to custom version 1.0.4